--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
-    "buildDev": "rm -rf dist && webpack --mode development --config webpack.dev.config.js",
+    "buildDev": "rm -rf dist && webpack --mode development --config webpack.dev.config.js --w",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
