--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
     "express": "^4.17.1",
+    "jasmine": "^3.9.0",
     "moment": "^2.29.1",
     "node-static": "^0.7.11"
   },
@@ -28,7 +29,7 @@
   "scripts": {
     "buildDev": "rm -rf dist && webpack --mode development --config webpack.dev.config.js --w",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
